--- a/index.css
+++ b/index.css
@@ -14,6 +14,14 @@
       text-align: right;
   }  
 
+  #form {
+    width: 300px;
+    margin: auto;
+    padding: 30px 25px;
+    background-color: white;
+    
+}
+
     
 
 
@@ -22,20 +30,6 @@ body{
     background-color: rgb(0, 153, 255);
 }
 
-.form1{
-    width: 350px;
-    height: 350px;
-    background-color: white;
-    margin-left: 30%;
-    margin-top: 50px;
-    padding-left: 50px;
-    padding-top: 50px;
-    padding-right: 50px;
-    padding-bottom: 50px;
-    
-    
-
-}
 
 .button{
     color: white;
@@ -52,4 +46,10 @@ body{
     border-radius: 10px;
     color: white;
     width: 170px;
+}
+
+.image{
+    width: 30px;
+    height: 30px;
+    
 }
